# SameGame

./: .gitignore  CMakeLists.txt
include/Engine/Component/: AnimSpriteComponent.h  BGSpriteComponent.h  CircleComponent.h  InputComponent.h  MoveComponent.h  SpriteComponent.h
include/Engine/Core/: Actor.h  Component.h  GameCore.h
include/Math/: MathUtil.h  Random.h  Vector2.h
include/SameAction/: Game.h
include/SameAction/Actor/: LaserActor.h  ShipActor.h  SpaceBGActor.h  StarBGActor.h
src/: CMakeLists.txt  SameActionGame.cc
src/Engine/: CMakeLists.txt
src/Engine/Component/: AnimSpriteComponent.cc  BGSpriteComponent.cc  CMakeLists.txt  CircleComponent.cc  InputComponent.cc  MoveComponent.cc  SpriteComponent.cc
src/Engine/Core/: Actor.cc  CMakeLists.txt  Component.cc  GameCore.cc
src/Math/: CMakeLists.txt  Random.cc  Vector2.cc
src/SameAction/: CMakeLists.txt  Game.cc
src/SameAction/Actor/: LaserActor.cc  ShipActor.cc  SpaceBGActor.cc  StarBGActor.cc
